<resources>
    <string name="app_name">MenteMatch</string>
    <string name="cuestionario_formato">Cuestionario: %1$s</string>
    <string name="welcome_subtitle">¡Tu futuro profesional comienza aquí!</string>
    <string name="email_hint">Correo Electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="no_account_text">¿No tienes cuenta? </string>
    <string name="register_here">Regístrate aquí</string>
</resources>